# math530

./: readme.org
gametheory/: dist.py
gue/: CMakeLists.txt  gue.cpp  readme.org  visualize.py
markov/: markov.jl  markov.org
ntina/: ntina.cpp
